--- a/test.html
+++ b/test.html
@@ -174,7 +174,7 @@ return tf.tidy(()=>{
 //load the model
 async function loadModel()
 {
-    model = await tf.loadModel('model/model.json')
+    model = await tf.loadModel('model/model2.json')
     //warm up
     model.predict(tf.zeros([1,28,28,1]))
     allowDrawing()
