--- a/test.html
+++ b/test.html
@@ -263,8 +263,8 @@ var mousePressed = false;
 
 <blockquote class="blockquote text-justify" style="margin:30px;">
  <p> Sketcher is a simple tool that uses CNN to recognize drawings.
- The CNN was trained to recognize 100 <a href='https://github.com/zaidalyafeai/zaidalyafeai.github.io/blob/master/sketcher/mini_classes.txt'>classes</a> using the quick draw <a href='https://github.com/googlecreativelab/quickdraw-dataset'> dataset</a>. It achieves 6% top 5 error. The accuracy could be improved
-but I focused on making the model light with around 1 million parameters. The table  will show the top 5 predictions. </p>
+ The CNN was trained to recognize 100 <a href='https://github.com/aashish2894/quick-draw-classifier/blob/master/mini_classes.txt'>classes</a> using the quick draw <a href='https://github.com/googlecreativelab/quickdraw-dataset'> dataset</a>
+ </p>
     <footer class="blockquote-footer">Aashish Kumar</footer>
   </blockquote>
 </div>
